--- a/codingexercises/pom.xml
+++ b/codingexercises/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>tinpui</groupId>
-    <artifactId>artifact</artifactId>
+    <artifactId>codingexercises</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
